DTGB-507: Fixed last item alignment issue on all types of grids.

--- a/components/41-organisms/collection/_collection.scss
+++ b/components/41-organisms/collection/_collection.scss
@@ -65,6 +65,12 @@ ul.grid-4 {
 }
 
 ul.grid-3 {
+  &::after {
+    flex: auto;
+    margin-left: span(4 of 12);
+    content: '';
+  }
+
   > li {
     @include phablet {
       width: span(6 of 12);
@@ -90,6 +96,12 @@ ul.grid-3 {
 }
 
 ul.grid-2 {
+  &::after {
+    flex: auto;
+    margin-left: span(6 of 12);
+    content: '';
+  }
+
   > li {
     @include phablet {
       width: span(6 of 12);
